More test for mouvement et changement de Mouvement.java for the class Mouvement.coordonneesVersNumeroManoury changed to public